# rust-walkthroughs-collector

./: Cargo.toml  NOTES.md  README.md  docker-compose.yaml  postgres-pgvector
collector/: Cargo.toml
collector/src/: data.rs  main.rs  walkthrough_article.rs
notebooks/: experiment.ipynb
src/: data.rs  main.rs  walkthrough_article.rs
