[package]
name = "rust-walkthroughs-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
dirs = "5.0.1"
futures = "0.3.30"
log = "0.4.21"
reqwest = {version = "0.12.4", features = ["blocking"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
std-logger = "0.5.3"
tl = "0.7.8"
tokio = { version = "1.38.0" }
