[package]
name = "rust-walkthroughs-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
lazy_static = "1.5.0"
log = "0.4.21"
rayon = "1.10.0"
reqwest = {version = "0.12.4", features = ["blocking"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
slug = "0.1.5"
soup = "0.5.1"
std-logger = "0.5.3"
tl = "0.7.8"
url = "2.5.2"
